# sequencer_lighting_linux

./: Cargo.toml
src/: animation.rs  animation_custom_colors.rs  animation_speed.rs  breathing.rs  buf.rs  color.rs  color_cycle.rs  ghosting.rs  lib.rs  line_streak.rs  main.rs  multizone.rs  raindrop.rs  ripple.rs  starlight.rs  wave.rs
src/animation/: animation_custom_colors.rs  animation_themes.rs  breathing.rs  color_cycle.rs  ghosting.rs  line_streak.rs  raindrop.rs  ripple.rs  starlight.rs  wave.rs
src/multizone/: animated_gradient.rs  animation_api.rs  custom_animation.rs  full_static.rs  key.rs  mid_shimmer.rs  per_key.rs  shimmer.rs
