[package]
name = "omen-rgb-test"
version = "0.1.0"
authors = ["simrat39 <simrats169169@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.5"
strum = "0.20"
strum_macros = "0.20"
rand = "0.8.3"
prisma = "0.1.1"